UI work in the Example and ExampleExt components. Fixed minor layout issues, tested with Firefox and IE7, formatted the screen widget XML files so they have consistent line spacing, and added some comments to help new users.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@653865 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/maincss.css
+++ b/framework/images/webapp/images/maincss.css
@@ -1793,6 +1793,10 @@ color: #0000ff;
 /* ===== Form Styles ===== */
 /* ======================== */
 
+.basic-form {
+margin-bottom: 1em;
+}
+
 .basic-form table {
 width: 100%;
 }
@@ -1878,6 +1882,10 @@ width: 20%;
 .form-widget table,
 .form-widget-table {
 width: auto;
+}
+
+.form-widget-table {
+margin-bottom: 1em;
 }
 
 /* Pager */
